Changed submodule path in .gitmodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,7 +34,7 @@
 	url = https://github.com/PX4/DriverFramework.git
 [submodule "src/lib/ecl"]
 	path = src/lib/ecl
-	url = https://github.com/PX4/ecl.git
+	url = git@github.com:pziyang/ecl.git
 [submodule "cmake/cmake_hexagon"]
 	path = cmake/cmake_hexagon
 	url = https://github.com/ATLFlight/cmake_hexagon
